[DevTools] Fix redirected fetches appearing as Other in network tab

Bug: 877519
Change-Id: I738d6f7f871413e2df493bc7918538be441464e0
Reviewed-on: https://chromium-review.googlesource.com/1219990
Commit-Queue: Joey Arhar <jarhar@chromium.org>
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#591491}
Former-commit-id: 548eb56296ec9a1443f925a08c0cd092e7dc06bb