third_party/blink/renderer/core/fetch/fetch_manager.cc
@@ -900,7 +900,6 @@ void FetchManager::Loader::PerformHTTPFetch(ExceptionState& exception_state) {
         std::move(factory_clone));
   }
 
-  probe::willStartFetch(execution_context_, this);
   threadable_loader_ = new ThreadableLoader(*execution_context_, this,
                                             resource_loader_options);
   threadable_loader_->Start(request);
@@ -928,7 +927,6 @@ void FetchManager::Loader::PerformDataFetch() {
   resource_loader_options.data_buffering_policy = kDoNotBufferData;
   resource_loader_options.security_origin = fetch_request_data_->Origin().get();
 
-  probe::willStartFetch(execution_context_, this);
   threadable_loader_ = new ThreadableLoader(*execution_context_, this,
                                             resource_loader_options);
   threadable_loader_->Start(request);
